<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_colour"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:autofillHints="dwdw"
        android:background="@drawable/input_field_background"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="15sp"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/input_field_background"
        android:hint="@string/passwordTextField"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintBottom_toTopOf="@+id/login_forgotten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/login_forgotten"
        android:layout_width="140dp"
        android:layout_height="21dp"
        android:layout_marginBottom="4dp"
        android:text="@string/forgotten_password"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/login_registration_button"
        android:text="@string/loginButton"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_display_text"
        android:layout_width="207dp"
        android:layout_height="27dp"
        android:layout_marginStart="1dp"
        android:text="@string/are_you_not_a_member"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/login_display_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>