<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_colour"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="USERNAME"
        android:background="@drawable/input_field_background"
        android:hint="@string/usernameTextField"
        android:inputType="textPersonName"
        android:paddingStart="15sp"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_field_background"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="15sp"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_field_background"
        android:hint="@string/passwordTextField"
        android:inputType="textPersonName"
        android:paddingStart="15sp"
        android:textColorHint="@color/hint_grey"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="296dp"
        android:background="@drawable/login_registration_button"
        android:text="REGISTER"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_display_text"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/are_you_already_a_member"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.010"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/register_display_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>